--- a/META.yml
+++ b/META.yml
@@ -1,14 +1,25 @@
 --- #YAML:1.0
-name:                Inline-Python
-version:             0.36
-abstract:            Write Perl subs and classes in Python.
-license:             perl
-author:              
+name:               Inline-Python
+version:            0.37
+abstract:           Write Perl subs and classes in Python.
+author:
     - Neil Watkiss <NEILW@cpan.org>
-generated_by:        ExtUtils::MakeMaker version 6.42
-distribution_type:   module
-requires:     
-    Inline:                        0.42
+license:            perl
+distribution_type:  module
+configure_requires:
+    ExtUtils::MakeMaker:  0
+build_requires:
+    ExtUtils::MakeMaker:  0
+requires:
+    Data::Dumper:  0
+    Inline:        0.46
+    Test:          0
+    Test::More:    0
+no_index:
+    directory:
+        - t
+        - inc
+generated_by:       ExtUtils::MakeMaker version 6.56
 meta-spec:
-    url:     http://module-build.sourceforge.net/META-spec-v1.3.html
-    version: 1.3
+    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
+    version:  1.4
