--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,26 @@
---- #YAML:1.0
-name:               Inline-Python
-version:            0.40
-abstract:           Write Perl subs and classes in Python.
+---
+abstract: 'Write Perl subs and classes in Python.'
 author:
-    - Neil Watkiss <NEILW@cpan.org>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Neil Watkiss <NEILW@cpan.org>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Data::Dumper:  0
-    Digest::MD5:   2.5
-    Inline:        0.46
-    Test:          0
-    Test::More:    0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.56
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.62, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Inline-Python
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Data::Dumper: 0
+  Digest::MD5: 2.5
+  Inline: 0.46
+  Test: 0
+  Test::More: 0
+version: 0.41
