--- a/META.yml
+++ b/META.yml
@@ -2,25 +2,18 @@
 abstract: 'Write Perl subs and classes in Python.'
 author:
   - 'Neil Watkiss <NEILW@cpan.org>'
-build_requires:
-  ExtUtils::MakeMaker: 0
-configure_requires:
-  ExtUtils::MakeMaker: 0
+build_requires: {}
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.6302, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.132830'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Inline-Python
 no_index:
   directory:
     - t
     - inc
-requires:
-  Data::Dumper: 0
-  Digest::MD5: 2.5
-  Inline: 0.46
-  Test: 0
-  Test::More: 0
-version: 0.43
+resources:
+  repository: http://github.com/niner/inline-python-pm.git
+version: '0.44'
